crates/pg_syntax/tests/snapshots/postgres_regress/union@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 AS three UNION SELECT 2 UNION SELECT 3 ORDER BY 1;
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..32
    SelectStmt@7..17
      ResTarget@7..17
        AConst@7..8
          Iconst@7..8 "1"
        Whitespace@8..9 " "
        As@9..11 "AS"
        Whitespace@11..12 " "
        Ident@12..17 "three"
    Whitespace@17..18 " "
    Union@18..23 "UNION"
    Whitespace@23..24 " "
    Select@24..30 "SELECT"
    Whitespace@30..31 " "
    SelectStmt@31..32
      ResTarget@31..32
        AConst@31..32
          Iconst@31..32 "2"
  Whitespace@32..33 " "
  Union@33..38 "UNION"
  Whitespace@38..39 " "
  SelectStmt@39..47
    Select@39..45 "SELECT"
    Whitespace@45..46 " "
    ResTarget@46..47
      AConst@46..47
        Iconst@46..47 "3"
  Whitespace@47..48 " "
  SortBy@48..58
    Order@48..53 "ORDER"
    Whitespace@53..54 " "
    By@54..56 "BY"
    Whitespace@56..57 " "
    AConst@57..58
      Iconst@57..58 "1"
  Ascii59@58..59 ";"

