crates/pg_syntax/tests/snapshots/postgres_regress/union@51.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from\n  ( select unique1 from tenk1 intersect select fivethous from tenk1 ) ss;"
---
SelectStmt@0..94
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  Ascii40@23..24 "("
  Whitespace@24..25 " "
  RangeSubselect@25..93
    SelectStmt@25..88
      Select@25..31 "select"
      Whitespace@31..32 " "
      SelectStmt@32..50
        ResTarget@32..39
          ColumnRef@32..39
            Ident@32..39 "unique1"
        Whitespace@39..40 " "
        From@40..44 "from"
        Whitespace@44..45 " "
        RangeVar@45..50
          Ident@45..50 "tenk1"
      Whitespace@50..51 " "
      Intersect@51..60 "intersect"
      Whitespace@60..61 " "
      SelectStmt@61..88
        Select@61..67 "select"
        Whitespace@67..68 " "
        ResTarget@68..77
          ColumnRef@68..77
            Ident@68..77 "fivethous"
        Whitespace@77..78 " "
        From@78..82 "from"
        Whitespace@82..83 " "
        RangeVar@83..88
          Ident@83..88 "tenk1"
    Whitespace@88..89 " "
    Ascii41@89..90 ")"
    Whitespace@90..91 " "
    Alias@91..93
      Ident@91..93 "ss"
  Ascii59@93..94 ";"

