crates/pg_syntax/tests/snapshots/postgres_regress/union@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 AS two UNION SELECT 2 UNION SELECT 2 ORDER BY 1;
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..30
    SelectStmt@7..15
      ResTarget@7..15
        AConst@7..8
          Iconst@7..8 "1"
        Whitespace@8..9 " "
        As@9..11 "AS"
        Whitespace@11..12 " "
        Ident@12..15 "two"
    Whitespace@15..16 " "
    Union@16..21 "UNION"
    Whitespace@21..22 " "
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    SelectStmt@29..30
      ResTarget@29..30
        AConst@29..30
          Iconst@29..30 "2"
  Whitespace@30..31 " "
  Union@31..36 "UNION"
  Whitespace@36..37 " "
  SelectStmt@37..45
    Select@37..43 "SELECT"
    Whitespace@43..44 " "
    ResTarget@44..45
      AConst@44..45
        Iconst@44..45 "2"
  Whitespace@45..46 " "
  SortBy@46..56
    Order@46..51 "ORDER"
    Whitespace@51..52 " "
    By@52..54 "BY"
    Whitespace@54..55 " "
    AConst@55..56
      Iconst@55..56 "1"
  Ascii59@56..57 ";"

