crates/pg_syntax/tests/snapshots/postgres_regress/union@62.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from (values (array[1, 2]), (array[1, 3])) _(x) union select x from (values (array[1, 2]), (array[1, 4])) _(x);"
---
SelectStmt@0..120
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..55
    ResTarget@7..8
      ColumnRef@7..8
        Ident@7..8 "x"
    Whitespace@8..9 " "
    From@9..13 "from"
    Whitespace@13..14 " "
    Ascii40@14..15 "("
    RangeSubselect@15..55
      SelectStmt@15..48
        Values@15..21 "values"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..33
          AArrayExpr@23..33
            Array@23..28 "array"
            Ascii91@28..29 "["
            AConst@29..30
              Iconst@29..30 "1"
            Ascii44@30..31 ","
            Whitespace@31..32 " "
            AConst@32..33
              Iconst@32..33 "2"
        Ascii93@33..34 "]"
        Ascii41@34..35 ")"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        Ascii40@37..38 "("
        List@38..48
          AArrayExpr@38..48
            Array@38..43 "array"
            Ascii91@43..44 "["
            AConst@44..45
              Iconst@44..45 "1"
            Ascii44@45..46 ","
            Whitespace@46..47 " "
            AConst@47..48
              Iconst@47..48 "3"
      Ascii93@48..49 "]"
      Ascii41@49..50 ")"
      Ascii41@50..51 ")"
      Whitespace@51..52 " "
      Alias@52..55
        Ident@52..53 "_"
        Ascii40@53..54 "("
        Ident@54..55 "x"
  Ascii41@55..56 ")"
  Whitespace@56..57 " "
  Union@57..62 "union"
  Whitespace@62..63 " "
  SelectStmt@63..118
    Select@63..69 "select"
    Whitespace@69..70 " "
    ResTarget@70..71
      ColumnRef@70..71
        Ident@70..71 "x"
    Whitespace@71..72 " "
    From@72..76 "from"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    RangeSubselect@78..118
      SelectStmt@78..111
        Values@78..84 "values"
        Whitespace@84..85 " "
        Ascii40@85..86 "("
        List@86..96
          AArrayExpr@86..96
            Array@86..91 "array"
            Ascii91@91..92 "["
            AConst@92..93
              Iconst@92..93 "1"
            Ascii44@93..94 ","
            Whitespace@94..95 " "
            AConst@95..96
              Iconst@95..96 "2"
        Ascii93@96..97 "]"
        Ascii41@97..98 ")"
        Ascii44@98..99 ","
        Whitespace@99..100 " "
        Ascii40@100..101 "("
        List@101..111
          AArrayExpr@101..111
            Array@101..106 "array"
            Ascii91@106..107 "["
            AConst@107..108
              Iconst@107..108 "1"
            Ascii44@108..109 ","
            Whitespace@109..110 " "
            AConst@110..111
              Iconst@110..111 "4"
      Ascii93@111..112 "]"
      Ascii41@112..113 ")"
      Ascii41@113..114 ")"
      Whitespace@114..115 " "
      Alias@115..118
        Ident@115..116 "_"
        Ascii40@116..117 "("
        Ident@117..118 "x"
  Ascii41@118..119 ")"
  Ascii59@119..120 ";"

