crates/pg_syntax/tests/snapshots/postgres_regress/union@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from (values (array[1, 2]), (array[1, 3])) _(x) intersect select x from (values (array[1, 2]), (array[1, 4])) _(x);"
---
SelectStmt@0..124
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..55
    ResTarget@7..8
      ColumnRef@7..8
        Ident@7..8 "x"
    Whitespace@8..9 " "
    From@9..13 "from"
    Whitespace@13..14 " "
    Ascii40@14..15 "("
    RangeSubselect@15..55
      SelectStmt@15..48
        Values@15..21 "values"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..33
          AArrayExpr@23..33
            Array@23..28 "array"
            Ascii91@28..29 "["
            AConst@29..30
              Iconst@29..30 "1"
            Ascii44@30..31 ","
            Whitespace@31..32 " "
            AConst@32..33
              Iconst@32..33 "2"
        Ascii93@33..34 "]"
        Ascii41@34..35 ")"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        Ascii40@37..38 "("
        List@38..48
          AArrayExpr@38..48
            Array@38..43 "array"
            Ascii91@43..44 "["
            AConst@44..45
              Iconst@44..45 "1"
            Ascii44@45..46 ","
            Whitespace@46..47 " "
            AConst@47..48
              Iconst@47..48 "3"
      Ascii93@48..49 "]"
      Ascii41@49..50 ")"
      Ascii41@50..51 ")"
      Whitespace@51..52 " "
      Alias@52..55
        Ident@52..53 "_"
        Ascii40@53..54 "("
        Ident@54..55 "x"
  Ascii41@55..56 ")"
  Whitespace@56..57 " "
  Intersect@57..66 "intersect"
  Whitespace@66..67 " "
  SelectStmt@67..122
    Select@67..73 "select"
    Whitespace@73..74 " "
    ResTarget@74..75
      ColumnRef@74..75
        Ident@74..75 "x"
    Whitespace@75..76 " "
    From@76..80 "from"
    Whitespace@80..81 " "
    Ascii40@81..82 "("
    RangeSubselect@82..122
      SelectStmt@82..115
        Values@82..88 "values"
        Whitespace@88..89 " "
        Ascii40@89..90 "("
        List@90..100
          AArrayExpr@90..100
            Array@90..95 "array"
            Ascii91@95..96 "["
            AConst@96..97
              Iconst@96..97 "1"
            Ascii44@97..98 ","
            Whitespace@98..99 " "
            AConst@99..100
              Iconst@99..100 "2"
        Ascii93@100..101 "]"
        Ascii41@101..102 ")"
        Ascii44@102..103 ","
        Whitespace@103..104 " "
        Ascii40@104..105 "("
        List@105..115
          AArrayExpr@105..115
            Array@105..110 "array"
            Ascii91@110..111 "["
            AConst@111..112
              Iconst@111..112 "1"
            Ascii44@112..113 ","
            Whitespace@113..114 " "
            AConst@114..115
              Iconst@114..115 "4"
      Ascii93@115..116 "]"
      Ascii41@116..117 ")"
      Ascii41@117..118 ")"
      Whitespace@118..119 " "
      Alias@119..122
        Ident@119..120 "_"
        Ascii40@120..121 "("
        Ident@121..122 "x"
  Ascii41@122..123 ")"
  Ascii59@123..124 ";"

