crates/pg_syntax/tests/snapshots/postgres_regress/union@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select x from (values (array[1, 2]), (array[1, 3])) _(x) except select x from (values (array[1, 2]), (array[1, 4])) _(x);"
---
SelectStmt@0..121
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..55
    ResTarget@7..8
      ColumnRef@7..8
        Ident@7..8 "x"
    Whitespace@8..9 " "
    From@9..13 "from"
    Whitespace@13..14 " "
    Ascii40@14..15 "("
    RangeSubselect@15..55
      SelectStmt@15..48
        Values@15..21 "values"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        List@23..33
          AArrayExpr@23..33
            Array@23..28 "array"
            Ascii91@28..29 "["
            AConst@29..30
              Iconst@29..30 "1"
            Ascii44@30..31 ","
            Whitespace@31..32 " "
            AConst@32..33
              Iconst@32..33 "2"
        Ascii93@33..34 "]"
        Ascii41@34..35 ")"
        Ascii44@35..36 ","
        Whitespace@36..37 " "
        Ascii40@37..38 "("
        List@38..48
          AArrayExpr@38..48
            Array@38..43 "array"
            Ascii91@43..44 "["
            AConst@44..45
              Iconst@44..45 "1"
            Ascii44@45..46 ","
            Whitespace@46..47 " "
            AConst@47..48
              Iconst@47..48 "3"
      Ascii93@48..49 "]"
      Ascii41@49..50 ")"
      Ascii41@50..51 ")"
      Whitespace@51..52 " "
      Alias@52..55
        Ident@52..53 "_"
        Ascii40@53..54 "("
        Ident@54..55 "x"
  Ascii41@55..56 ")"
  Whitespace@56..57 " "
  Except@57..63 "except"
  Whitespace@63..64 " "
  SelectStmt@64..119
    Select@64..70 "select"
    Whitespace@70..71 " "
    ResTarget@71..72
      ColumnRef@71..72
        Ident@71..72 "x"
    Whitespace@72..73 " "
    From@73..77 "from"
    Whitespace@77..78 " "
    Ascii40@78..79 "("
    RangeSubselect@79..119
      SelectStmt@79..112
        Values@79..85 "values"
        Whitespace@85..86 " "
        Ascii40@86..87 "("
        List@87..97
          AArrayExpr@87..97
            Array@87..92 "array"
            Ascii91@92..93 "["
            AConst@93..94
              Iconst@93..94 "1"
            Ascii44@94..95 ","
            Whitespace@95..96 " "
            AConst@96..97
              Iconst@96..97 "2"
        Ascii93@97..98 "]"
        Ascii41@98..99 ")"
        Ascii44@99..100 ","
        Whitespace@100..101 " "
        Ascii40@101..102 "("
        List@102..112
          AArrayExpr@102..112
            Array@102..107 "array"
            Ascii91@107..108 "["
            AConst@108..109
              Iconst@108..109 "1"
            Ascii44@109..110 ","
            Whitespace@110..111 " "
            AConst@111..112
              Iconst@111..112 "4"
      Ascii93@112..113 "]"
      Ascii41@113..114 ")"
      Ascii41@114..115 ")"
      Whitespace@115..116 " "
      Alias@116..119
        Ident@116..117 "_"
        Ascii40@117..118 "("
        Ident@118..119 "x"
  Ascii41@119..120 ")"
  Ascii59@120..121 ";"

